# Vault

./: .gitignore  DOCKER_UPDATES.md  OLLAMA_SETUP.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  health.py
backend/app/cli/: __init__.py  sync.py
backend/app/connectors/: base.py
backend/app/core/: config.py  text.py
backend/app/evaluation/: __init__.py  dataset.py  generate.py  metrics.py  paths.py  report.py  run.py  runner.py
backend/app/models/: __init__.py  chunk.py  embedded_chunk.py  filter.py  rag_response.py  search_request.py  search_result.py  sync_result.py
backend/app/processors/: chunker.py  metadata_registry.py  prompt_builder.py  query_analyzer.py
backend/app/search/: __init__.py  engine.py  fusion.py  reranker.py  strategy.py
backend/app/services/: chat_service.py  embedding_service.py  generation_service.py  ollama.py  qdrant.py  qdrant_filter_builder.py  qdrant_service.py  rag_service.py  retriever.py  sync_service.py
backend/core/: config.py
backend/models/: document.py
backend/quick-tests/: retrieval_dataset.json  test-ingestion-pipeline.py  test-notion-client-response.py  test-notion.py  verify_chunker.py  verify_embedding_service.py  verify_evaluation_framework.py  verify_metadata_retrieval.py  verify_qdrant.py  verify_rag.py  verify_retrieval_evaluation.py  verify_search.py  verify_story1.py  verify_story2.py  verify_story3.py  verify_sync_cli.py  verify_sync_service.py
backend/services/: chroma.py  ollama.py
(+21 files in other folders)
